2000-12-31  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in, various Makefile.am: added --disable-tools and
	--disable-data configure switches
	* tools/.cvsignore: removed 'txt2cc'
	* palette.cc/h: added Palette::show() to dump palette onscreen
	* gamewin.cc/h: added Game_window::plasma() function (needs work)
	* bggame.cc: fixed up Guardian speech (show right shapes, show plasma)
	* shapes/font.cc: implemented center_text()

2000-12-31  Jeff Freedman  <jeff@amy.nerble.net>

	* Started writing usecode parser.

2000-12-29  Jeff Freedman  <jeff@amy.nerble.net>

	* Bugs fixed:  Can break glass counters.  Don't ready torches.
	Show sundials correctly.

2000-12-29  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* various: renamed hack-mover to map-editor

2000-12-27  Jeff Freedman  <jeff@amy.nerble.net>

	* Usecode:  Intrinsic 0x92 discovered.  Also increased range of
	find_nearby_avatar(), so beware of problems.

2000-12-26  Jeff Freedman  <jeff@amy.nerble.net>

	* Edit colors in palette editor.

2000-12-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* savepcx.cc: fixed 8 bit output (RGB <-> BGR)
	* mapedit/.cvsignore: added 'paltest'

2000-12-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* savepcx.cc: unsigned long -> Uint32, unsigned short -> Uint16
	* configure.in: removed a few crosscompiling-related warnings
	* configure.in,mapedit/Makefile.am: fixed gtk-interface conditional

2000-12-23  Jeff Freedman  <jeff@amy.nerble.net>

	* xdrag.cc (Xdnd): Moved XDND code here.
	* Set frame in shape chooser.

2000-12-23  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* imagewin/savepcx.cc, imagewin.cc/h: add .pcx saving functionality
	* exult.cc: ctrl-alt-s takes a screenshot to exult%03i.pcx

2000-12-20  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (Actor): Make 'follow()' more sensitive to NPC's being
	left behind.

2000-12-19  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in: fixed --disable-long-long-warnings
